Add user to auth
