# server/docs/swagger.json
@@ -33,7 +33,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.wrapToken"
+                            "$ref": "#/definitions/auth.userToken"
                         }
                     },
                     "400": {
@@ -69,7 +69,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.wrapToken"
+                            "$ref": "#/definitions/auth.userToken"
                         }
                     },
                     "400": {
@@ -185,6 +185,17 @@
         }
     },
     "definitions": {
+        "auth.userToken": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/domain.User"
+                }
+            }
+        },
         "auth.wrapToken": {
             "type": "object",
             "properties": {
